force-app/main/default/objects/sked__Region__c/sked__Region__c.object-meta.xml
<CustomObject>
    <label>Region</label>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>