force-app/main/default/objects/sked__Region__c/fields/sked__Location__c.field-meta.xml
<CustomField>
    <fullName>sked__Location__c</fullName>
    <label>Location</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>