force-app/main/default/objects/sked__Region__c/fields/sked__Radius__c.field-meta.xml
<CustomField>
    <fullName>sked__Radius__c</fullName>
    <description>value in meters</description>
    <inlineHelpText>Meters from location</inlineHelpText>
    <label>Radius</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>