force-app/main/default/objects/sked__Region__c/fields/sked__Timezone__c.field-meta.xml
<CustomField>
    <fullName>sked__Timezone__c</fullName>
    <inlineHelpText>i.e. &quot;Australia/Brisbane&quot;.</inlineHelpText>
    <label>Timezone</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>