force-app/main/default/objects/sked__Region__c/fields/sked_Biomed_Collection_Op_Center__c.field-meta.xml
<CustomField>
    <fullName>sked_Biomed_Collection_Op_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biomed Collection Op (Center)</label>
    <referenceTo>Biomed_Collection_Op_Center__c</referenceTo>
    <relationshipLabel>Collection Operations Timezones (Skedulo Regions)</relationshipLabel>
    <relationshipName>sked_Regions</relationshipName>
    <type>Lookup</type>
</CustomField>