force-app/main/default/objects/sked__Region__c/fields/sked_Code__c.field-meta.xml
<CustomField>
    <fullName>sked_Code__c</fullName>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>