force-app/main/default/objects/sked__Region__c/fields/sked_Default__c.field-meta.xml
<CustomField>
    <fullName>sked_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>