force-app/main/default/objects/sked__Region__c/fields/sked_External_Id__c.field-meta.xml
<CustomField>
    <fullName>sked_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>