force-app/main/default/objects/sked__Region__c/fields/sked_Territory__c.field-meta.xml
<CustomField>
    <fullName>sked_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>sked_Territory__c</referenceTo>
    <relationshipLabel>Regions</relationshipLabel>
    <relationshipName>sked_Regions</relationshipName>
    <type>Lookup</type>
</CustomField>