force-app/main/default/objects/sked__Region__c/listViews/sked__All.listView-meta.xml
<ListView>
    <fullName>sked__All</fullName>
    <columns>NAME</columns>
    <columns>sked_Biomed_Collection_Op_Center__c</columns>
    <columns>sked__Timezone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Birmingham AL_Central</value>
    </filters>
    <label>All</label>
</ListView>